--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Cloud storage folder watcher",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,12 @@
   },
   "homepage": "https://github.com/Spires-of-Affliction/cloud-watcher#readme",
   "devDependencies": {
-    "eslint": "^7.2.0"
+    "eslint": "^7.2.0",
+    "nodemon": "^2.0.4"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "ws": "^7.3.0"
   }
 }
