--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-FOLDER_PATH=C:\\Users\\User\\Documents\\Folder
-BACKUP_PATH=C:\\Users\\User\\Documents\\Backup
+FOLDER_PATH=C:\Users\User\Documents\Folder
+BACKUP_PATH=C:\Users\User\Documents\Backup
 SERVER_URL=ws://server-url.com
 BACKUP_AMOUNT=10
