--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "chokidar": "^3.4.0",
     "dotenv": "^8.2.0",
     "fs-extra": "^9.0.1",
     "ws": "^7.3.0"
